优化私信界面